Testing no homepage

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wealth-distribution-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Wealth-Inequality.github.io/Wealth-Inequality.github.io",
+  "homepage": "",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
